<resources>
    <string name="app_name">Plannet</string>
    <string name="nav_open">open nav</string>
    <string name="nav_close">close nav</string>
    <string name="teacher_header">teacher header</string>
    <string name="txtTodayEvent">Today Event:</string>
    <string name="txtReminders">Classes:</string>
    <string name="txtMonth">Jan</string>
    <string name="txtDay">07</string>
    <string name="txtTitle">SQA: Prototype</string>
    <string name="txtType">Homework</string>
    <string name="calendar_header">Calendar</string>

    <string name="classes">Classes on</string>
    <string name="detail">see detail</string>
    <string name="Subject">Subject</string>
    <string name="subject_header">subject header</string>
    <string name="add_button">add button</string>
    <string name="add">ADD</string>

    <string name="txtStartTime">10:00</string>
    <string name="txtLocation">410C</string>
    <string name="txtDetailSession">Session details</string>
    <string name="txtSessionName">Session name:</string>
    <string name="txtSessionDescription">Description:</string>
    <string name="txtSessionLocation">Location:</string>
    <string name="txtStart">Start at:</string>
    <string name="txtEnd">End at:</string>
    <string name="txtSessionColor">Color:</string>
    <string name="txtSessionDayOfWeek">Day of week:</string>

    <string name="txtDueDate">Due to:</string>


    <string name="started">Get Started</string>
    <string name="btn_login">Log In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your password</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="overview">Overview</string>
    <string name="calendar">Calendar</string>
    <string name="todo">Todo</string>
    <string name="btnTimetable">Timetable</string>
    <string name="add_class">Add class</string>
    <string name="cancel">Cancel</string>
    <string name="new_class">New Class</string>
    <string name="finish">Finish</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>

    <string-array name="dateOfWeek">
        <item>Monday</item>
        <item>Tueday</item>
        <item>Wednesday</item>
        <item>Thurday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="range">
        <item>A+</item>
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>C+</item>
        <item>C</item>
    </string-array>

    <string-array name="subjectName">
        <item>Select name of session</item>
        <item>SQA</item>
        <item>MPR</item>
        <item>SE2</item>
        <item>PR1</item>
        <item>HCI</item>
        <item>RMC</item>
        <item>CGR</item>
        <item>BDM</item>
        <item>SE1</item>
        <item>IWS</item>
    </string-array>

</resources>