<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/todayEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner_card"
        android:backgroundTint="@color/today_event"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.25"
            android:orientation="vertical">

<!--            <TextView-->
<!--                android:id="@+id/txtMonth"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_margin="0dp"-->
<!--                android:fontFamily="@font/pt_bold"-->
<!--                android:text="@string/txtMonth"-->
<!--                android:textSize="20sp" />-->

            <TextView
                android:id="@+id/txtDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pt_bold"
                android:text="@string/txtDay"
                android:paddingTop="15dp"
                android:textSize="20dp" />
        </LinearLayout>


        <View
            android:id="@+id/divider7"
            android:layout_width="1dp"
            android:layout_height="match_parent"

            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/pt_bold"
                android:text="@string/txtTitle"
                android:textColor="#FC4F9B"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/regular_pt"
                android:text="@string/txtType"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"

                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/pt_bold"

                android:text="@string/txtStartTime"
                android:textColor="#FC4F9B"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/regular_pt"
                android:text="@string/txtLocation"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>