<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtDetailSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/pt_bold"
        android:text="@string/txtDetailSession"
        android:textColor="#FC4F9B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="130dp">

        <LinearLayout
            android:id="@+id/SNContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"

            android:background="@drawable/rounded_corner_card"
            android:backgroundTint="#e3f8fa"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailSession"
            app:layout_constraintVertical_bias="0.201">

            <LinearLayout
                android:id="@+id/SessionNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtSessionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_bold"
                    android:text="@string/txtSessionName"
                    android:textColor="#FC4F9B"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtSessionNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/regular_pt"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/SessionDescriptionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/SNContainer">

                <TextView
                    android:id="@+id/txtSessionDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_bold"
                    android:text="@string/txtSessionDescription"
                    android:textColor="#FC4F9B"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtSessionDescriptionValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/regular_pt"
                    android:text=""
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/SessionLocarionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="5dp"

                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:layout_editor_absoluteX="15dp">

                <TextView
                    android:id="@+id/txtSessionLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_bold"
                    android:text="@string/txtSessionLocation"
                    android:textColor="#FC4F9B"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtSessionLocationValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/regular_pt"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SessionStartContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="15dp">

                <TextView
                    android:id="@+id/txtSessionStartime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_bold"
                    android:text="@string/txtStart"
                    android:textColor="#FC4F9B"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtSessionStartValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/regular_pt"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SessionEndContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="15dp">

                <TextView
                    android:id="@+id/txtEndtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_bold"
                    android:text="@string/txtEnd"
                    android:textColor="#FC4F9B"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtSessionEndValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/regular_pt"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SessionColorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:layout_editor_absoluteX="15dp">

                <TextView
                    android:id="@+id/txtSessionColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_bold"
                    android:text="@string/txtSessionColor"
                    android:textColor="#FC4F9B"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtSessionColorValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/regular_pt"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SessionDayOfWeekContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:layout_editor_absoluteX="15dp">

                <TextView
                    android:id="@+id/txtSessionDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_bold"
                    android:text="@string/txtSessionDayOfWeek"
                    android:textColor="#FC4F9B"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtSessionDayOfWeekValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/regular_pt"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="70dp"
        android:background="@null"

        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/checked" />

    <ImageButton
        android:id="@+id/imageButton5"

        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:layout_marginBottom="32dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>